# autorunner

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/cli/: args.rs
src/hash/: calculate.rs
src/runner/: process.rs
