[package]
name = "example-todos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.4"
pico-args = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.9"
sha256 = "1.6.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
console = "0.14.0"
