[package]
name = "autorunner"  # изменить имя пакета
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-mmacosx-version-min=10.15"]

[dependencies]
cfg-if = "1.0.3"
cpufeatures = "0.2.17"
sha2 = "0.10.8"
typenum = "1.18.0"
walkdir = "2.4.0"
