[package]
name = "autorunner"  # изменить имя пакета
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-mmacosx-version-min=10.15"]

[dependencies]
clap = {version = "4.5.47", features = [ "derive" ]}
sha256 = "1.6.0"
walkdir = "2.5.0"
